@@ -203,10 +203,11 @@ module NewRelic
 
     def check_for_glassfish
       return unless defined?(::JRuby) &&
-         (((com.sun.grizzly.jruby.rack.DefaultRackApplicationFactory rescue nil) &&
-         defined?(com::sun::grizzly::jruby::rack::DefaultRackApplicationFactory)) ||
+        (((com.sun.grizzly.jruby.rack.DefaultRackApplicationFactory rescue nil) &&
+          defined?(com::sun::grizzly::jruby::rack::DefaultRackApplicationFactory)) ||
          ((org.jruby.rack.DefaultRackApplicationFactory rescue nil) &&
-         defined?(org::jruby::rack::DefaultRackApplicationFactory)))
+          defined?(org::jruby::rack::DefaultRackApplicationFactory)) ||
+         defined?(::GlassFish::Server))
       @dispatcher = :glassfish
     end
 
