@@ -5,9 +5,9 @@
 
 Gem::Specification.new do |s|
   s.name = %q{newrelic_rpm}
-  s.version = "2.12.1.alpha"
+  s.version = "2.12.1"
 
-  s.required_rubygems_version = Gem::Requirement.new("> 1.3.1") if s.respond_to? :required_rubygems_version=
+  s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Bill Kayser"]
   s.date = %q{2010-05-17}
   s.description = %q{New Relic RPM is a Ruby performance management system, developed by
